fix: Align hp bar on card on low resolution

--- a/src/app/features/multi-calc/pokemon-card/pokemon-card.component.scss
+++ b/src/app/features/multi-calc/pokemon-card/pokemon-card.component.scss
@@ -13,8 +13,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 35px;
-  height: 35px;
+  margin-left: -0.5em;
+  margin-top: -0.5em;
+  width: 40px;
+  height: 50px;
 }
 
 .handle {
@@ -29,7 +31,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  gap: 0.5em;
 }
 
 .left-side {
